--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
             <button id="generate-btn" class="btn-primary">
                 ✨ 生成任务
             </button>
-            <button id="generate-multiple-btn" class="btn-secondary">
-                🎯 生成 5 个任务
-            </button>
+        </div>
+
+        <div class="stats">
+            <div class="stat-item">
+                <span class="stat-icon">✅</span>
+                <span class="stat-label">已完成</span>
+                <span class="stat-value" id="completed-count">0</span>
+            </div>
+            <div class="stat-item">
+                <span class="stat-icon">📊</span>
+                <span class="stat-label">总计生成</span>
+                <span class="stat-value" id="total-count">0</span>
+            </div>
         </div>
 
         <div class="history">
